--- a/src/app/cuenta/nuevacuenta/nuevacuenta.component.html
+++ b/src/app/cuenta/nuevacuenta/nuevacuenta.component.html
@@ -1,4 +1,3 @@
-<!-- <p>desde blaaaaaaaaaaaank</p> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -38,3 +37,27 @@
       </div>
     </div>
   </nav>
+  <p></p>
+  <p></p>
+  <p></p>
+<h3>Nueva Cuenta</h3>
+<div class="mb-3">
+    <label for="idsocioInput" class="form-label">ID SOCIO</label>
+    <input type="number" class="form-control" id="idsocioInput" placeholder="Ingrese el ID del propietario" #inputIdsocio>
+</div>
+<div class="mb-3">
+    <label for="tipoInput" class="form-label">Tipo</label>
+    <input type="text" class="form-control" id="tipoInput" placeholder="Ingrese el tipo de cuenta" #inputTipo>
+</div>
+<div class="mb-3">
+    <label for="nroctaInput" class="form-label">Nro Cuenta</label>
+    <input type="text" class="form-control" id="nroctaInput" placeholder="Ingrese el numero de cuenta" #inputNrocta>
+</div>
+<div class="mb-3">
+    <label for="saldoInput" class="form-label">Saldo</label>
+    <input type="number" class="form-control" id="saldoInput" placeholder="Ingrese el saldo" #inputSaldo>
+</div>
+<hr>
+
+<!-- <a href="cuenta" class="btn btn-primary btn-lg" tabindex="-1" role="button" (click)="crearCuenta(inputIdsocio.value, inputTipo.value, inputNrocta.value, inputSaldo.valueAsNumber">Aceptar</a> -->
+
