--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -3,6 +3,12 @@
     <hr class="text-white">
     <div class="list-group list-reset">
         <a href="socio"
-           class="list-group-item list-group-item-action">Socio</a>
+           class="list-group-item list-group-item-action">Lista de Socios</a>
+        <a href="cuenta"
+           class="list-group-item list-group-item-action">Cuentas</a>
+        <a href="movimiento"
+           class="list-group-item list-group-item-action">Movimientos</a>
+        <a href="prestamo"
+           class="list-group-item list-group-item-action">Prestamos</a>
     </div>
 </div>
