--- a/src/app/movimiento/listamovimiento/listamovimiento.component.html
+++ b/src/app/movimiento/listamovimiento/listamovimiento.component.html
@@ -1,4 +1,3 @@
-<!-- <p>desde blaaaaaaaaaaaank</p> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
@@ -38,3 +37,25 @@
       </div>
     </div>
   </nav>
+  <p></p>
+  <p></p>
+  <p></p>
+  <table class="table table-hover">
+      <thead class="table-dark">
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">TIPO</th>
+            <th scope="col">MONTO</th>
+            <th scope="col">FEC. EMISION</th>
+            <th scope="col">Id Cuenta</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let movimiento of lista">
+            <th scope="row">{{ movimiento.id }}</th>
+            <td>{{ movimiento.tipoMov }}</td>
+            <td>{{ movimiento.montoMov }}</td>
+            <td>{{ movimiento.fechahoraMov }}</td>
+          </tr>
+      </tbody>
+  </table>
