intento de login

--- a/src/app/ingresar/ingresar.component.html
+++ b/src/app/ingresar/ingresar.component.html
@@ -52,7 +52,7 @@
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
-                <form>
+                <form (ngSubmit)="validando">
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
                     <span class="h1 fw-bold mb-0">C R E D I M A X</span>
@@ -70,6 +70,7 @@
 
                   <div class="pt-1 mb-4">
                     <a href="espacio" class="btn btn-dark btn-lg btn-block" tabindex="-1" role="button">Ingresar</a>
+                    <button type="submit" class="btn btn-dark btn-lg btn-block" (click)="validando(inputLogin.value, inputPassword.value)">INGRESAR</button>
                     <!-- (click)="validando(inputLogin.value, inputPassword.value)" -->
                   </div>
 
