--- a/src/app/socio/nuevosocio/nuevosocio.component.html
+++ b/src/app/socio/nuevosocio/nuevosocio.component.html
@@ -140,8 +140,8 @@
                 <p></p>
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
-                    <a href="ingresar" class="btn btn-outline-success btn-lg" tabindex="-1" role="button" (click)="crearSocio(inputNombre.value, inputApellidos.value, inputDni.value, inputSexo.value, inputOcupacion.value, inputFechanac.value, inputCorreo.value, inputCelular.value, inputUsuario.value, inputContrasena.value)">Registrar</a>
-                    <!-- <button type="button" class="btn btn-outline-success btn-lg">Registrar</button> -->
+                    <a href="espacio" class="btn btn-outline-success btn-lg" tabindex="-1" role="button" (click)="crearSocio(inputNombre.value, inputApellidos.value, inputDni.value, inputSexo.value, inputOcupacion.value, inputFechanac.value, inputCorreo.value, inputCelular.value, inputUsuario.value, inputContrasena.value)">Registrar</a>
+                    <!-- <button type="button" class="btn btn-outline-success btn-lg">Registrar</button>  -->
                   </div>
                 </div>
                 <div class="col-md-6 mb-4">
